demo/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: the-deployment
  template:
    metadata:
      labels:
        name: the-deployment
    spec:
      containers:
        - name: hello
          image: example.invalid/hello
