demo/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    name: the-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
